# solvis-api

./: .gitignore  README.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  serverless.yml  setup.cfg
.github/workflows/: deploy-on-push-prod.yaml  deploy-on-push-test.yaml  deploy-on-push.yaml  deploy-test.yaml  deploy-workflow.yaml  run-tests-on-pull-request.yaml  run-tests.yaml
api/: analysis.py  api.py  aws_util.py  cloudwatch.py  config.py  logging.yaml  model.py  process_general_task.py  process_solution.py  pynamodb_config.py
api/analysis/: solution_location.py
api/analysis/tests/: test_solution_location.py
api/datastore/: datastore.py  model.py  solvis_db.py  solvis_db_query.py
api/datastore/resources/: __init__.py
api/namespaces/: __init__.py  locations.py  radii.py  solution_analysis_geojson.py  solutions.py
api/solvis/: multi_city_events.py
api/tests/: multi_city_event_tests.py  pynamo_tests.py  test_17_AKL_edge_case.py  test_34_WLG_ruptures_not_found.py  test_api_location_list.py  test_process_analysis.py  test_solution_analysis_requests.py
api/toshi_api/: toshi_api.py
solvis_api/: api.py  aws_util.py  cloudwatch.py  config.py  logging.yaml  process_general_task.py  process_solution.py  pynamodb_config.py
solvis_api/analysis/: solution_location.py
solvis_api/analysis/tests/: test_solution_location.py
solvis_api/datastore/: datastore.py  model.py  solvis_db.py  solvis_db_query.py
solvis_api/datastore/resources/: __init__.py
solvis_api/namespaces/: __init__.py  locations.py  radii.py  solution_analysis_geojson.py  solutions.py
solvis_api/solvis/: multi_city_events.py
solvis_api/tests/: pynamo_tests.py  test_17_AKL_edge_case.py  test_34_WLG_ruptures_not_found.py  test_api_location_list.py  test_process_analysis.py  test_solution_analysis_requests.py
solvis_api/toshi_api/: toshi_api.py
